--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1 class="title">I miei dispositivi</h1>
     </header>
     <div class="content content-padded">
-        <button class="btn btn-block">Potenza istantanea: 1750 W</button>   
+        <button class="btn btn-block">Potenza istantanea: 1650 W</button>   
         <ul class="table-view">
             {{#each this}}
             <li class="table-view-cell media">
@@ -37,12 +37,12 @@
                     </div>
                 </a>
                 {{#if notRunning}}
-                    <button class="btn btn-primary" style="width:120px;">Spento<span class="badge badge-primary">{{potenzaIstantanea}} W</span></button>
+                    <button class="btn" style="width:110px;">Spento<span class="badge badge-primary">{{potenzaIstantanea}} W</span></button>
                 {{else}}
                     {{#if warning}}
-                        <button class="btn btn-negative" style="width:120px;">Allarme<span class="badge badge-primary">{{potenzaIstantanea}} W</span></button>
+                        <button class="btn btn-negative" style="width:110px;">Allarme<span class="badge badge-primary">{{potenzaIstantanea}} W</span></button>
                     {{else}}                
-                        <button class="btn btn-positive" style="width:120px;">Acceso<span class="badge badge-primary">{{potenzaIstantanea}} W</span></button>
+                        <button class="btn btn-positive" style="width:110px;">Acceso<span class="badge badge-primary">{{potenzaIstantanea}} W</span></button>
                     {{/if}}
                 {{/if}}                    
             </li>
