--- a/index.html
+++ b/index.html
@@ -100,21 +100,21 @@
     <div class="content" id="map"></div>
 </script>
 
-<script src="cordova.js"></script>
-<script src="lib/jquery.js"></script>
-<script src="lib/router.js"></script>
-<script src="lib/fastclick.js"></script>
-<script src="lib/handlebars.js"></script>
-<script src="lib/ratchet.js"></script>
-<script src="lib/chart.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js"></script>
-<script src="js/DeviceService.js"></script>
-<script src="js/global.js"></script>
-<script src="js/LoginView.js"></script>
-<script src="js/DeviceListView.js"></script>
-<script src="js/DeviceView.js"></script>
-<script src="js/TechMapView.js"></script>
-<script src="js/app.js"></script>
+<script type="text/javascript" src="cordova.js"></script>
+<script type="text/javascript" src="lib/jquery.js"></script>
+<script type="text/javascript" src="lib/router.js"></script>
+<script type="text/javascript" src="lib/fastclick.js"></script>
+<script type="text/javascript" src="lib/handlebars.js"></script>
+<script type="text/javascript" src="lib/ratchet.js"></script>
+<script type="text/javascript" src="lib/chart.min.js"></script>
+<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+<script type="text/javascript" src="js/DeviceService.js"></script>
+<script type="text/javascript" src="js/global.js"></script>
+<script type="text/javascript" src="js/LoginView.js"></script>
+<script type="text/javascript" src="js/DeviceListView.js"></script>
+<script type="text/javascript" src="js/DeviceView.js"></script>
+<script type="text/javascript" src="js/TechMapView.js"></script>
+<script type="text/javascript" src="js/app.js"></script>
 
 </body>
 </html>
