New try with access

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <a class="btn btn-link btn-nav pull-left" href="#devices">
             <span class="icon icon-left-nav"></span>
         </a>
-        <h1 class="title">{{nome}}</h1>
+        <h1 class="title">{{nome}}: i consumi</h1>
     </header>        
     <div class="content">
         <div class="content-padded">
