--- a/index.html
+++ b/index.html
@@ -86,9 +86,9 @@
               <a class="control-item" href="#item3mobile">Ultima fattura</a>
             </div>
             <div class="card">
-              <span id="item1mobile" class="control-content active grafico"><canvas id="chart1mobile"></canvas></span>
-              <span id="item2mobile" class="control-content grafico"><canvas id="chart2mobile"></canvas></span>
-              <span id="item3mobile" class="control-content grafico"><canvas id="chart3mobile"></canvas></span>
+              <span id="item1mobile" class="control-content active"><canvas id="chart1mobile"></canvas></span>
+              <span id="item2mobile" class="control-content"><canvas id="chart2mobile"></canvas></span>
+              <span id="item3mobile" class="control-content"><canvas id="chart3mobile"></canvas></span>
             </div>
         </div>
     
